--- a/app/src/main/res/layout/activity_accountsettings.xml
+++ b/app/src/main/res/layout/activity_accountsettings.xml
@@ -22,10 +22,13 @@
             android:layout_height="wrap_content"
             android:id="@+id/relLayout3"
             android:layout_below="@id/relLayout2"
-            android:layout_marginBottom="50dp"
-            >
+            android:layout_marginBottom="50dp">
+
+            <include layout="@layout/layout_center_accountsettings"/>
 
         </RelativeLayout>
+
+        <include layout="@layout/layout_bottom_navigation_view"/>
 
     </RelativeLayout>
 
