--- a/app/src/main/res/layout/activity_accountsettings.xml
+++ b/app/src/main/res/layout/activity_accountsettings.xml
@@ -3,6 +3,8 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
+    <include layout="@layout/layout_center_viewpager"/>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
