Added scrolling to the profile gridview

--- a/app/src/main/res/layout/layout_center_profile.xml
+++ b/app/src/main/res/layout/layout_center_profile.xml
@@ -109,7 +109,8 @@
                 android:verticalSpacing="1dp"
                 android:horizontalSpacing="1dp"
                 android:stretchMode="columnWidth"
-                android:gravity="center">
+                android:gravity="center"
+                android:scrollbars="vertical">
 
             </GridView>
 
