--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -72,16 +72,15 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_centerInParent="true"
-        android:id="@+id/loginProgressBar"
-        android:visibility="gone"/>
+        android:id="@+id/loginProgressBar"/>
 
     <TextView
+        android:id="@+id/loginProgressBarTextView"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:text="@string/please_wait"
         android:layout_below="@id/loginProgressBar"
         android:layout_centerHorizontal="true"
-        android:textColor="@color/black"
-        android:visibility="gone"/>
+        android:textColor="@color/black"/>
 
 </RelativeLayout>
